chore: update to Spring Boot to 3.1.12 and related dependencies.
- Update Spring Boot to version 3.1.12
- Update Spring dependency management plugin to 1.1.7
- Refresh OpenAPI documentation dependencies
- Minor adjustments to security configuration