@@ -11,6 +11,13 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 import org.springframework.util.StringUtils;
 
+/**
+ * OpenAPI configuration for SITMUN API documentation.
+ *
+ * <p>This configuration is active only when the "openapi" profile is enabled. It provides: - API
+ * information (title, version, description) - Security scheme configuration (JWT bearer
+ * authentication) - Module-specific customization through properties
+ */
 @Configuration
 @Profile("openapi")
 public class OpenApiConfigurer {
@@ -25,14 +32,18 @@ public class OpenApiConfigurer {
   }
 
   /**
-   * Describe SITMUN 3.0 API using OpenApi.
+   * Configures the OpenAPI documentation for SITMUN 3.0 API.
    *
-   * @return the OpenAPI description of SITMUN 3.0
+   * <p>This configuration: - Sets up JWT bearer authentication as the security scheme - Customizes
+   * the API title based on the module name - Includes version information - Adds a description
+   * noting the active development status
+   *
+   * @return the OpenAPI configuration for SITMUN 3.0
    */
   @Bean
   public OpenAPI customOpenAPI() {
     final String securitySchemeName = "bearerAuth";
-    final String apiTitle = String.format("%s API", StringUtils.capitalize(moduleName));
+    final String apiTitle = "%s API".formatted(StringUtils.capitalize(moduleName));
     return new OpenAPI()
         .addSecurityItem(new SecurityRequirement().addList(securitySchemeName))
         .components(
